# finance-alert

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  justfile
backend/: pyproject.toml  tmp_concentration_check.py
backend/alembic/: env.py
backend/alembic/versions/: 0601129beb3a_add_price_alerts.py  074cbd6d1b1e_create_stock_drawings_table.py  1ee645d88c82_stock_scores.py  2a137ffef964_stocks_instrument_type.py  384580a0f742_cusip_ticker_map.py  390120b342e6_institutional_holdings_repair_and_unique.py  3f1c8a9d2e44_scan_run_current_target_and_subphases.py  429ed41825c6_scan_runs_composite_index_on_status_.py  42b3643a8f15_positions_table.py  47c2035665bd_drop_bollinger_squeeze_rules.py  4841a82d3387_add_rule_expression.py  512f9cc71164_drop_rule_engine.py  5971d1723def_macro_series_add_source.py  5f67045e4500_normalize_country_to_iso2.py  6ed5a4d41b17_scan_run_kind.py  7c1a9e2d4b50_technical_scores.py  7e2e42691dff_drop_unique_rules_watchlist_kind.py  84171542fc6a_signal_outcomes_warehouse.py  8dbb0cbb601d_split_quality_to_profitability_.py  8e15e3904462_scan_run_phase_column.py  91d8c40e0e08_alerts_composite_indexes.py  9405b58cdb90_normalize_sector_taxonomy_to_gics.py  98ebae3370fc_normalize_lse_ohlcv_to_pounds.py  9fc31644b13b_signal_outcomes_source.py  a1b2c3d4e5f6_kpi_snapshots.py  a62229a35412_fetch_cache.py  aabe2bc3256f_alert_engine_schema.py  ad763660c270_score_history_table.py  b210847355b7_add_market_snapshot.py  b7e1c0f2a9d4_stock_metrics_table.py  cb5b3905466b_alert_signal_date.py  d20bc27c8db9_ohlcv_nodata_quarantine_columns.py  d6f96e0d827e_scan_run_last_progress_at.py  e0489f561198_drop_watchlists_feature.py  eb4269507d82_alert_signal_name.py  ec2c9dd8eae7_scan_run_tracking.py  ef20eb3c229f_macro_series_observations_release_dates.py  efea1d6d8451_scan_runs_add_phase_history.py  fdf9a913832b_institutional_portfolios.py  ff5bc449215b_initial_schema.py
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  calendar.py  catalog.py  dashboard.py  deps.py  institutionals.py  kpi.py  market.py  market_detail.py  multi_tf.py  platform_health.py  positions.py  price_alerts.py  rule_catalog.py  rule_performance.py  rule_preview.py  rules.py  scan_log.py  scores.py  sectors.py  spotlight.py  stock_drawings.py  stocks.py  watchlists.py
backend/app/core/: breaker_state.py  config.py  db.py  db_json.py  errors.py  log_buffer.py  logging.py  persist_json.py  security.py  visibility.py
backend/app/data/: calibration_seed.json  regime_conditioned_study.json  replay_outcomes_summary.json  score_ic_report.json  signal_calibration.json
backend/app/indicators/: adx.py  atr.py  bb.py  ema.py  macd.py  rsi.py  sma.py
backend/app/models/: __init__.py  alert.py  catalog_log.py  fetch_cache.py  index.py  institutional.py  kpi_snapshot.py  macro.py  market_snapshot.py  ohlcv.py  position.py  price_alert.py  rule.py  scan_run.py  score_history.py  signal_outcome.py  stock.py  stock_drawing.py  stock_metrics.py  stock_score.py  technical_score.py  user.py  watchlist.py
backend/app/rules/: adx_rules.py  base.py  bollinger_rules.py  breakout_rules.py  composite.py  cross_rules.py  gap_rules.py  macd_rules.py  mean_reversion_rules.py  registry.py  rsi_rules.py  volume_rules.py
backend/app/scheduler/: __init__.py
backend/app/schemas/: alert.py  auth.py  calendar.py  catalog.py  confluence.py  dashboard.py  institutional.py  market.py  platform.py  position.py  price_alert.py  rule.py  score.py  spotlight.py  stock.py  stock_detail.py  stock_drawing.py  watchlist.py
backend/app/scripts/: backfill_13f_history.py  backfill_chain_enrichment.py  backfill_direxion.py  backfill_null_sectors.py  backfill_replay_outcomes.py  backfill_signal_outcomes.py  bootstrap.py  bootstrap_rules.py  bootstrap_watchlists.py  cleanup_china_and_eu.py  confirmation_outcomes.py  dedupe_stocks.py  entry_ic_report.py  fit_signal_calibration.py  fixup_delisted_2026_05_11.py  invalidate_empty_fundamentals.py  migrate_sqlite_to_pg.py  multihorizon_outcomes.py  normalize_industries.py  normalize_sectors.py  refresh_fred.py  regime_conditioned_outcomes.py  rel_strength_ic.py  remove_sse50.py  retag_industries_2026_05_12.py  retune.py  score_ic_backtest.py  seed.py  seed_institutionals.py  seed_macro_sources.py  seed_sec_13f.py  set_admin_password.py  signal_detector_outcomes.py  signal_factor_outcomes.py
backend/app/services/: _retry.py  alert_service.py  analyst_actions_feed.py  auth_service.py  cache_metrics.py  calendar_macros.py  calendar_service.py  catalog_refresh_service.py  confluence_service.py  country_normalizer.py  currency_units.py  data_source_metrics.py  detector_performance_service.py  earnings_session_timing.py  (+67 more)
backend/scripts/: audit_price_units.py  rank_snapshot.py
backend/tests/: conftest.py  conftest_market.py  test_admin_endpoints_auth.py  test_alert_outcome_surfacing.py  test_alert_service.py  test_api_alerts.py  test_api_auth.py  test_api_calendar.py  test_api_catalog.py  test_api_dashboard.py  test_api_equity_curve.py  test_api_institutional_holder_counts.py  test_api_market_summary.py  test_api_ohlcv.py  test_api_platform_health.py  test_api_platform_stream.py  test_api_positions.py  test_api_price_alerts.py  test_api_recompute_status_stream.py  test_api_rule_catalog.py  test_api_rule_preview.py  test_api_rules.py  test_api_scan_status_stream.py  test_api_scores.py  test_api_sectors.py  test_api_sectors_esp2.py  test_api_spotlight.py  test_api_stock_detail.py  test_api_stock_drawings.py  test_api_stock_news.py  test_api_stocks.py  test_api_stocks_detail_error_handling.py  test_api_watchlists.py  test_auto_archive_concluded.py  test_backfill_13f_history.py  test_backfill_replay_outcomes.py  test_bootstrap_watchlists.py  test_cache_metrics.py  test_calendar_service.py  test_catalog_refresh_service.py  (+124 more)
(+493 files in other folders)
