[project]
name = "finance-alert-backend"
version = "0.1.0"
description = "Finance Alert backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    # psycopg3 (binary wheels — no libpq build toolchain, incl. linux/aarch64
    # for the OCI image). Added for the M7 Postgres migration; the app connects
    # via postgresql+psycopg://… at the P4 cutover. Harmless on the SQLite DB.
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "bcrypt>=4.1",
    "itsdangerous>=2.1",
    "pandas>=2.2",
    "lxml>=5.1",
    "httpx>=0.27",
    "python-multipart>=0.0.31",
    "yfinance>=1.3.0",
    "numpy>=2.4.4",
    "requests>=2.31",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
# B008: FastAPI uses `param: T = Depends(...)` pattern extensively; not a bug in this codebase.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Alembic env.py is a stock template — leave its long lines alone.
"alembic/env.py" = ["E501"]
# Tests use SQLAlchemy session classes (PascalCase locals) and that's idiomatic.
"tests/conftest.py" = ["N806"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
