[project]
name = "finance-alert-backend"
version = "0.1.0"
description = "Finance Alert backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    # psycopg3 (binary wheels — no libpq build toolchain, incl. linux/aarch64
    # for the OCI image). Added for the M7 Postgres migration; the app connects
    # via postgresql+psycopg://… at the P4 cutover. Harmless on the SQLite DB.
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "bcrypt>=4.1",
    "itsdangerous>=2.1",
    "pandas>=2.2",
    "lxml>=5.1",
    "httpx>=0.27",
    "python-multipart>=0.0.31",
    "yfinance>=1.3.0",
    "numpy>=2.4.4",
    "requests>=2.31",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
# The bug-catching rules (F pyflakes + B bugbear) are fully enforced. The
# entries below are deliberate house-style / intentional-pattern exemptions —
# NOT bugs — so the gate flags real problems without churning aesthetics.
ignore = [
    "B008",   # FastAPI `param: T = Depends(...)` in defaults — idiomatic, not a bug.
    "E501",   # long-form explanatory comments are a deliberate house style.
    "E402",   # deliberate lazy/late imports (circular-dep breaks, test path setup).
    "N806",   # non-lowercase locals: SQLAlchemy Session / numeric matrices are idiomatic.
    "N811",   # module singletons imported under a lowercase alias by design (log_buffer…).
    "N818",   # control-flow signal exceptions (…Cancelled) are not "…Error"s.
    "SIM102", # nested `if`s are often clearer with the intervening comments left in place.
    "SIM103", # collapsing a guard sequence's last branch into `return not (...)` hurts it.
    "SIM105", # `try/except: pass` with an intentional broad-except reads clearer than suppress.
    "SIM108", # forced ternaries hurt readability on non-trivial branches.
]

[tool.ruff.lint.per-file-ignores]
# Alembic env.py is a stock template — leave its long lines alone.
"alembic/env.py" = ["E501"]
# Test setup style: `db.add(x); db.commit()` (E701/E702), market-state consts in
# names (PRE → N802), `LiveQuote as _LQ` (N814), and short loop vars (E741).
"tests/*" = ["E701", "E702", "N802", "N814", "E741"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
